--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dotenv-expand": "^12.0.1",
+    "jotai": "^2.12.5",
     "ky": "^1.8.1",
     "lucide-react": "^0.525.0",
     "next": "15.2.4",
